<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".ui.MainActivity">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/img_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@drawable/ic_circle_tick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <EditText
            android:id="@+id/et_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@null"
            android:ellipsize="end"
            android:fontFamily="@font/manrope_bold"
            android:hint="@string/notes_title"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_back" />

        <TextView
            android:id="@+id/tv_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:ellipsize="end"
            android:fontFamily="@font/manrope_bold"
            android:hint="@string/date"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/colorGray"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_note_title" />


        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_time">

            <View
                android:id="@+id/color_view"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@color/colorBlue" />

            <EditText
                android:id="@+id/et_note_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ellipsize="end"
                android:fontFamily="@font/manrope_bold"
                android:hint="@string/notes_sub_title"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>

        <ImageView
            android:id="@+id/img_note"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:visibility="gone"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/ll1" />

        <LinearLayout
            android:id="@+id/layout_webUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:padding="@dimen/_10sdp"
            android:visibility="gone"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_note">

            <EditText
                android:id="@+id/et_web_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@null"
                android:ellipsize="end"
                android:text="@string/http"
                android:fontFamily="@font/manrope_regular"
                android:hint="@string/web_url"
                android:inputType="textMultiLine"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/_18ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:fontFamily="@font/manrope_bold"
                    android:background="@color/colorAccent"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:fontFamily="@font/manrope_bold"
                    android:background="@color/colorAccent"
                    android:text="@string/ok"
                    android:textSize="@dimen/_12sdp"
                    android:textAllCaps="false"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_web_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:ellipsize="end"
            android:fontFamily="@font/manrope_bold"
            android:hint="@string/date"
            android:inputType="text"
            android:visibility="gone"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/colorGray"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_webUrl" />


        <EditText
            android:id="@+id/et_note_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@null"
            android:ellipsize="end"
            android:fontFamily="@font/manrope_regular"
            android:hint="@string/notes_desc"
            android:inputType="textMultiLine"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_web_link" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img_more"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center"
                android:src="@drawable/img_bar"
                app:tint="@color/white" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>