<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:behavior_peekHeight="40dp"
        app:layout_behavior="@string/bottom_sheet_behavior"
        tools:context=".ui.MainActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/img_more"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/img_bar"
                android:layout_gravity="center"
                app:tint="@color/white"/>

        </FrameLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/fNote1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_5sdp">

                <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="@drawable/note_color_1"
                    android:padding="@dimen/_5sdp" />

                <ImageView
                    android:id="@+id/img_note1"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_tick"
                    app:tint="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fNote2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_5sdp">

                <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="@drawable/note_color_2"
                    android:padding="@dimen/_5sdp" />

                <ImageView
                    android:id="@+id/img_note2"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_tick"
                    app:tint="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fNote4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_5sdp">

                <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="@drawable/note_color_4"
                    android:padding="@dimen/_5sdp" />

                <ImageView
                    android:id="@+id/img_note4"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_tick"
                    app:tint="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fNote5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_5sdp">

                <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="@drawable/note_color_5"
                    android:padding="@dimen/_5sdp" />

                <ImageView
                    android:id="@+id/img_note5"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_tick"
                    app:tint="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fNote6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_5sdp">

                <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="@drawable/note_color_6"
                    android:padding="@dimen/_5sdp" />

                <ImageView
                    android:id="@+id/img_note6"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_tick"
                    app:tint="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fNote7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_5sdp">

                <View
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="@drawable/note_color_7"
                    android:padding="@dimen/_5sdp" />

                <ImageView
                    android:id="@+id/img_note7"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_tick"
                    app:tint="@color/white" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/et_note_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:maxLines="1"
                android:textAlignment="textEnd"
                android:paddingEnd="@dimen/_10sdp"
                android:fontFamily="@font/manrope_bold"
                android:ellipsize="end"
                android:text="@string/pick_color"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_image"
                app:tint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/et_note_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:maxLines="1"
                android:fontFamily="@font/manrope_bold"
                android:ellipsize="end"
                android:text="@string/add_image"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_webUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_link"
                app:tint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/et_note_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:maxLines="1"
                android:fontFamily="@font/manrope_bold"
                android:ellipsize="end"
                android:text="@string/add_web_link"/>

        </LinearLayout>


    </LinearLayout>
</layout>